--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -30,7 +30,7 @@
     </style>
 
     <style name="ActivityTheme">
-       <item name="android:windowLayoutInDisplayCutoutMode">
+       <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="27">
           shortEdges <!-- default, shortEdges, or never -->
        </item> 
     </style>
